--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,6 +1,9 @@
 name: Scrape Data
 on:
     workflow_dispatch:
+    schedule:
+      # https://crontab.cronhub.io/
+      - cron: "*/15 14-23 7-8 3 *" # Week 2
 jobs:
     scrape:
         runs-on: ubuntu-latest
@@ -15,10 +18,11 @@ jobs:
               run: python download_external_data.py
               env:
                 TBA_API_KEY: ${{ secrets.TBA_API_KEY }}
+            - name: Set current date as env variable
+              run: echo "NOW=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_ENV
             - name: Commit changes
               if: ${{ success() }}
               uses: EndBug/add-and-commit@v9
               with:
-                  message: "Scrape Scouting Data"
+                  message: "Scrape Scouting Data at ${{ env.NOW }}"
                   default_author: github_actor
-                  new_branch: test_branch
