--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,6 +4,12 @@ name: Deploy static content to Pages
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  schedule:
+    # https://crontab.cronhub.io/
+    - cron: "5/15 14-23 7-8 3 *" # Week 2
+  push:
+    branches:
+      - main
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
