Prep for week 6

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -7,8 +7,9 @@ on:
   schedule:
     # https://crontab.cronhub.io/
     # - cron: "5/15 14-23 7-8 3 *" # Week 2
-    # - cron: "*/15 14-23 15-16 3 *" # Week 3
-      - cron: "*/15 14-23 21-22 3 *" # Week 4
+    # - cron: "5/15 14-23 15-16 3 *" # Week 3
+    # - cron: "5/15 13-22 21-22 3 *" # Week 4
+    - cron: "5/15 13-22 4-5 4 *" # Week 6
   push:
     branches:
       - main
