--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -5,7 +5,8 @@ on:
       # https://crontab.cronhub.io/
       # - cron: "*/15 14-23 7-8 3 *" # Week 2
       # - cron: "*/15 14-23 15-16 3 *" # Week 3
-      - cron: "*/15 14-23 21-22 3 *" # Week 4
+      # - cron: "*/15 13-22 21-22 3 *" # Week 4
+      - cron: "*/15 13-22 4-5 4 *" # Week 6
 jobs:
     scrape:
         runs-on: ubuntu-latest
