--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -6,7 +6,8 @@ on:
       # - cron: "*/15 14-23 7-8 3 *" # Week 2
       # - cron: "*/15 14-23 15-16 3 *" # Week 3
       # - cron: "*/15 13-22 21-22 3 *" # Week 4
-      - cron: "*/15 13-22 4-5 4 *" # Week 6
+      # - cron: "*/15 13-22 4-5 4 *" # Week 6
+      - cron: "*/15 12-23 17-18 4 *" # Champs
 jobs:
     scrape:
         runs-on: ubuntu-latest
