--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -9,7 +9,8 @@ on:
     # - cron: "5/15 14-23 7-8 3 *" # Week 2
     # - cron: "5/15 14-23 15-16 3 *" # Week 3
     # - cron: "5/15 13-22 21-22 3 *" # Week 4
-    - cron: "5/15 13-22 4-5 4 *" # Week 6
+    # - cron: "5/15 13-22 4-5 4 *" # Week 6
+    - cron: "5/15 12-23 17-18 4 *" # Champs
   push:
     branches:
       - main
